--- a/style.css
+++ b/style.css
@@ -2,9 +2,11 @@ h1, h2, p{
     text-align: center;
 }
 body{
+    background: url("https://i.pinimg.com/originals/9c/fc/4c/9cfc4c37f3d447fb4ece4f05e64fa9a9.gif");
     
 }
-div{
+.menu{
     width : 80%;
     background-color: #bfe6fc;
+    margin: 0 auto;
 }
