--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
 }
 .menu{
     width : 80%;
+    max-width: 800px;
     background-color: #bfe6fc;
     margin: 15px auto;
     padding: 10px 20px;
@@ -14,7 +15,7 @@ body{
 .item p{
     display: inline-block;
 }
-.flavor{
+.flavor, .dessert{
     text-align: left;
     width: 75%;
 }
